err/chandler-debugplugin.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Chandler_debugPlugin-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Chandler_debugPlugin-1.0.egg-info/locale'...
Listing './lib/python3.5/site-packages/Chandler_debugPlugin-1.0.egg-info/locale/es'...
Listing './lib/python3.5/site-packages/Chandler_debugPlugin-1.0.egg-info/locale/es/html'...
Listing './lib/python3.5/site-packages/Chandler_debugPlugin-1.0.egg-info/locale/fr'...
Listing './lib/python3.5/site-packages/Chandler_debugPlugin-1.0.egg-info/locale/fr/html'...
Listing './lib/python3.5/site-packages/Chandler_debugPlugin-1.0.egg-info/locale/fr/images'...
Listing './lib/python3.5/site-packages/Chandler_debugPlugin-1.0.egg-info/resources'...
Listing './lib/python3.5/site-packages/Chandler_debugPlugin-1.0.egg-info/resources/html'...
Listing './lib/python3.5/site-packages/Chandler_debugPlugin-1.0.egg-info/resources/images'...
Listing './lib/python3.5/site-packages/debug'...
Compiling './lib/python3.5/site-packages/debug/DebugMenu.py'...
***   File "./lib/python3.5/site-packages/debug/DebugMenu.py", line 81
    print repr(obj)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/debug/SharingMenu.py'...
***   File "./lib/python3.5/site-packages/debug/SharingMenu.py", line 112
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/debug/blockviewer'...
Compiling './lib/python3.5/site-packages/debug/createItems.py'...
***   File "./lib/python3.5/site-packages/debug/createItems.py", line 278
    print 'ERROR unable to parse alarm spec ,' , spec
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/debug/generate_dialog'...
Compiling './lib/python3.5/site-packages/debug/generate_dialog/ItemGenerator.py'...
***   File "./lib/python3.5/site-packages/debug/generate_dialog/ItemGenerator.py", line 199
    print "\n\nUnable to open %s\n\n" % fname
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/debug/i18n_tests'...
Listing './lib/python3.5/site-packages/debug/mime_tests'...
Listing './lib/python3.5/site-packages/debug/repositoryviewer'...
Listing './lib/python3.5/site-packages/debug/scripts'...
Compiling './lib/python3.5/site-packages/debug/scripts/BlockInspector.py'...
***   File "./lib/python3.5/site-packages/debug/scripts/BlockInspector.py", line 30
    print blockItem.blockName, blockItem
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/debug/scripts/EventTiming.py'...
***   File "./lib/python3.5/site-packages/debug/scripts/EventTiming.py", line 21
    print newCalList
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/debug/scripts/ItemInspector.py'...
***   File "./lib/python3.5/site-packages/debug/scripts/ItemInspector.py", line 28
    print i.displayName.encode('utf8'), repr(i)
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/debug/scripts/StdoutSelected.py'...
***   File "./lib/python3.5/site-packages/debug/scripts/StdoutSelected.py", line 29
    print "- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -"
                                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
